--- a/estudiantes.html
+++ b/estudiantes.html
@@ -57,7 +57,20 @@
                     </div>
                   </div>
             </section>
+
+            <section class="col-8">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">AMIA MICHELLE MALIZA</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">ESTUDIANTE</h6>
+                      <p class="card-text">Rindiendo la evaluación</p>
+                      <a href="tamiamaliza.html" class="card-link">Ver más ...</a>
+                    </div>
+                  </div>
+            </section>
+
         </section>
+        
     </main>
     <br>
     <footer class="footer mt-auto py-3 bg-light">
